// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackHeader renders correctly with showBackButton set to false 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "height": 44,
      "justifyContent": "center",
      "left": 0,
      "marginTop": 20,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;

exports[`BackHeader renders correctly with showBackButton set to true 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "height": 44,
      "justifyContent": "center",
      "left": 0,
      "marginTop": 20,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 5,
        "opacity": 1,
        "position": "absolute",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/icons/Back.png",
          }
        }
        style={
          Object {
            "height": 17,
            "width": 10,
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;
